added more example blogpost to work with

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -20,11 +20,7 @@
 
 /* main/Homepage container */
 .main-container {
-  display: grid;
-  grid-template-columns: 23vw auto !important;
-  /* position: absolute; */
-  /* margin-top:  80px; behövs ej med hero section på homepage */
+  margin-top:  80px; 
   padding-bottom: 50px;
   width: 100%;
-  background-color: #f0f0f0;
 }
