--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,7 +3,7 @@
 @import url("Styles/blogpost.css");
 
 #root {
-  max-width: 1280px;
+  max-width: 1000px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
@@ -22,5 +22,8 @@
 .main-container {
   margin-top:  80px; 
   padding-bottom: 50px;
-  width: 100%;
+  /* max-width: 75%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center; */
 }
