--- a/frontend/src/Styles/blogpost.css
+++ b/frontend/src/Styles/blogpost.css
@@ -5,3 +5,10 @@
     width: 100% !important;
 }
 
+.blogpost-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1.5rem;
+}
