--- a/frontend/src/Styles/blogpost.css
+++ b/frontend/src/Styles/blogpost.css
@@ -16,6 +16,10 @@
     gap: 1.5rem;
 }
 
+/* .blog-post-container {
+    border: 1px solid #ddd;
+} */
+
 .border-bottom {
     padding-bottom: 10px;
 }
